After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652041 - [Patch] Fix build with xulrunner nightly (JS_SetScriptStackQuota removal + JS_ClearNewbornRoots)
[Patch] Fix build with xulrunner nightly (JS_SetScriptStackQuota removal + JS...
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-07 12:26 UTC by Marc-Antoine Perennou
Modified: 2011-06-07 15:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Conditionally adapt to JS_SetScriptStackQuota removal (1.93 KB, patch)
2011-06-07 12:27 UTC, Marc-Antoine Perennou
committed Details | Review
Conditionally adapt to JS_ClearNewbornRoots removal (1.79 KB, patch)
2011-06-07 13:12 UTC, Marc-Antoine Perennou
committed Details | Review

Description Marc-Antoine Perennou 2011-06-07 12:26:22 UTC
In https://hg.mozilla.org/mozilla-central/rev/707cefa34478 upstream totally removed this function considering it's no longer necessary. Don't use it when not available
Comment 1 Marc-Antoine Perennou 2011-06-07 12:27:31 UTC
Created attachment 189387 [details] [review]
Conditionally adapt to JS_SetScriptStackQuota removal
Comment 2 Marc-Antoine Perennou 2011-06-07 13:12:02 UTC
Created attachment 189396 [details] [review]
Conditionally adapt to JS_ClearNewbornRoots removal

Acutally the same goes for commit http://hg.mozilla.org/mozilla-central/rev/3783e5f4a417 and JS_ClearNewbornRoots
Comment 3 Colin Walters 2011-06-07 15:06:10 UTC
Review of attachment 189387 [details] [review]:

Looks good.
Comment 4 Colin Walters 2011-06-07 15:07:06 UTC
Review of attachment 189396 [details] [review]:

The commit message here is wrong, I'll fix it before committing.  Otherwise looks obviously correct.  Thanks!