xul nightly: Conditionally adapt to JS_ClearNewbornRoots removal

In https://hg.mozilla.org/mozilla-central/rev/3783e5f4a417 upstream
removed JS_ClearNewbornRoots(); don't try to use it if it's not
available.

https://bugzilla.gnome.org/show_bug.cgi?id=652041

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>